--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "bordoni/phpass": ">=0.3",
-        "laravel/framework": "^5.2|^6.0|^7.0|^8.0"
+        "bordoni/phpass": ">=0.3"
     },
     "autoload": {
         "psr-4": {
