--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "bordoni/phpass": ">=0.3"
+        "bordoni/phpass": ">=0.3",
+        "laravel/framework": "^5.4|^6.0|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
